# darkrai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: download_model.py  generate_world.py
src/darkrai/: __init__.py  cli.py  config.py  index.py  mistral_client.py
tests/: conftest.py  test_index.py  test_mistral_client.py
