[tool.poetry]
name = "darkrai"
version = "0.1.0"
description = "Command line tool for generating fantasy worlds with Mistral"
authors = ["Darkrai Dev <dev@example.com>"]
readme = "README.md"
packages = [{ include = "darkrai", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.0"
transformers = "^4.41.2"
huggingface-hub = "^0.23.0"
tokenizers = "^0.20.0"
python-dotenv = "^1.0"
numpy = "^1.0"
torch = "^2.2.2"
llama-cpp-python = "^0.3.9"
faiss-cpu = "^1.11.0"
llama-index = "^0.12.42"
sentence-transformers = "^4.1.0"

[tool.poetry.scripts]
darkrai = "darkrai.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
